# eigen-magma-benchmark

./: .gitignore  README.md  README.textile
results/: gflops.R
src/: CMakeLists.txt
src/cmake/: FindMKL.cmake  compiler_settings.cmake  targets.cmake
src/main/cpp/: benchmark_main.cc
